Added separate utility class -> ProfitUtils